<resources>
    <string name="app_name">Marvel Challenge</string>
    <string name="title_about">About</string>
    <string name="title_characters">Characters</string>
    <string name="title_details">Details</string>
    <string name="characters_top_headline">Avengers,\nAssemble!</string>
    <string name="search_view_query_hint">Search</string>
    <string name="reset_search">Reset search</string>
    <string name="empty_view_text">We couldn\'t find what you were looking for :(</string>
    <string name="splash_copyright_notice">© Marvel %d - All rights reserved</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="overview">Overview</string>
    <string name="character_name_unknown">(?)</string>
    <string name="general_name_unknown">(?)</string>
    <string name="character_description_unknown">This character is still a mystery to us…</string>
    <string name="general_description_unknown">We don\'t know what to say about this one…</string>
    <string name="details_share_message">Do you know %s? Here\'s an overview: %s</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="stories">Stories</string>
    <string name="see_all">See all</string>
    <string name="series">Series</string>
    <string name="about_this_app_headline">About this app</string>
    <string name="about_top_note">Charismatic, agile, strong, united, passionate and with a lot of wisdom, we are all Heroes in our own way.</string>
    <string name="about_overview_text">In fact, what makes us heroes are not supernatural forces, but the small gestures and attitudes that help to improve the daily lives of all of us and those around us. Heroes from December 8th to 11th at Parque das Nações – Lisbon.</string>
    <string name="top_selling_items_label">Top selling items</string>
    <string name="top_selling_items_text">Some things you might like...</string>
</resources>