<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.afaneca.marvelchallenge.ui.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_navigation_characters_to_navigation_details"
            app:destination="@id/navigation_details"
            app:popUpTo="@id/navigation_characters"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.afaneca.marvelchallenge.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.afaneca.marvelchallenge.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="imgUrl"
            app:argType="string" />
    </fragment>
</navigation>