<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_default"
        tools:context=".ui.about.AboutFragment">

        <TextView
            android:id="@+id/tv_header"
            style="@style/App.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_this_app_headline"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/about_this_app_headline"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_header" />

        <TextView
            android:id="@+id/tv_top_note"
            style="@style/About.TopQuote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/about_top_note"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/tv_headline"
            app:layout_constraintTop_toBottomOf="@id/tv_headline" />

        <TextView
            android:id="@+id/tv_overview_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/tv_top_note"
            app:layout_constraintTop_toBottomOf="@id/tv_top_note" />

        <TextView
            android:id="@+id/tv_overview_text"
            style="@style/About.RegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/about_overview_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/tv_overview_label"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_label" />

        <TextView
            android:id="@+id/tv_top_selling_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/top_selling_items_label"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/tv_overview_text"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_text" />

        <TextView
            android:id="@+id/tv_top_selling_text"
            style="@style/About.RegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:text="@string/top_selling_items_text"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/tv_top_selling_label"
            app:layout_constraintTop_toBottomOf="@id/tv_top_selling_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_selling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_double"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_selling_text"
            tools:itemCount="5"
            tools:listitem="@layout/adapter_comic_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_default" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_default" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>