<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_default">

        <TextView
            android:id="@+id/tv_overview_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:lineSpacingMultiplier="1.75"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_label"
            tools:text="Anthony Edward Tony Stark was a billionaire industrialist and inventor. He was the former CEO of Stark Industries, a conglomerate originally started by his father, Howard Stark. While in Afghanistan, Tony was captured by Ten Rings, and was ordered to build the Jericho missile for them. Instead, he, along with Ho Yinsen, used their resources to build a suit of armor and make their escape. Returning to America, Tony improves his armor and becomes the armored superhero known as Iron Man." />
        <!-- region comics-->
        <TextView
            android:id="@+id/tv_comics_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/comics"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/margin_default"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comics_label"
            tools:ignore="RtlSymmetry"
            tools:itemCount="5"
            tools:listitem="@layout/adapter_comic_item"
            tools:visibility="visible" />
        <!--endregion-->
        <!-- region events-->
        <TextView
            android:id="@+id/tv_events_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/events"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/tv_events_see_all_cta"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/rv_comics"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_events_see_all_cta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_events_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_events_label"
            tools:itemCount="3"
            tools:listitem="@layout/adapter_event_item"
            tools:visibility="visible" />
        <!--endregion-->
        <!-- region stories-->
        <TextView
            android:id="@+id/tv_stories_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/stories"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/rv_events"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_stories_label"
            tools:itemCount="3"
            tools:listitem="@layout/adapter_stories_series_item"
            tools:visibility="visible" />
        <!--endregion-->
        <!-- region series-->
        <TextView
            android:id="@+id/tv_series_label"
            style="@style/App.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/series"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/rv_stories"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_series_label"
            tools:itemCount="3"
            tools:listitem="@layout/adapter_stories_series_item"
            tools:visibility="visible" />
        <!--endregion-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_default" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>